--- a/templates/student_login.html
+++ b/templates/student_login.html
@@ -21,20 +21,36 @@
   <div style="text-align:center; margin-top: 40px;">
     <img src="/static/university_logo.png" alt="شعار الجامعة" width="120">
     <h2>تسجيل دخول الطالب</h2>
+
     {% if error %}
-      <p style="color:red;">{{ error }}</p>
+      <p id="errorMsg" style="color:red;">{{ error }}</p>
     {% endif %}
+
     <form method="POST" action="/student_login">
       <input type="text" name="full_name" placeholder="الاسم الكامل" id="name"><br><br>
       <input type="text" name="university_id" placeholder="الرقم الجامعي" id="uid"><br><br>
       <button type="submit">دخول</button>
     </form>
   </div>
+
   <script>
-    {% if error %}
-      document.getElementById("name").classList.add("shake");
-      document.getElementById("uid").classList.add("shake");
-    {% endif %}
+    window.onload = function() {
+      {% if error %}
+        const nameInput = document.getElementById("name");
+        const uidInput = document.getElementById("uid");
+        const errorMsg = document.getElementById("errorMsg");
+
+        nameInput.classList.add("shake");
+        uidInput.classList.add("shake");
+
+        // إخفاء رسالة الخطأ بعد 3 ثواني (اختياري)
+        setTimeout(() => {
+          if (errorMsg) {
+            errorMsg.style.display = "none";
+          }
+        }, 3000);
+      {% endif %}
+    }
   </script>
 </body>
 </html>
