--- a/templates/courses.html
+++ b/templates/courses.html
@@ -66,7 +66,7 @@
             <td>{{ course['department_name'] }}</td>
             <td>{{ course['semester_name'] }}</td>
             <td>{{ course['year_name'] }}</td>
-            <td><img src="/static/qrcodes/{{ course['qr_code'] }}" width="50"></td>
+            <td><img src="/static/qr/qr_course_{{ course.id }}.png" alt="رمز المادة"></td>
 
             <!-- ✅ تم تضمين الفصل الدراسي -->
            
@@ -97,7 +97,7 @@
         <input type="number" name="semester_id" placeholder="ID الفصل الدراسي" required> <!-- ✅ تأكد من هذا الحقل -->
         <button type="submit">➕ إضافة</button>
     </form>
-    
+        
     </form>
 </body>
 </html>
