--- a/templates/courses.html
+++ b/templates/courses.html
@@ -66,8 +66,7 @@
             <td>{{ course['department_name'] }}</td>
             <td>{{ course['semester_name'] }}</td>
             <td>{{ course['year_name'] }}</td>
-            <td><img src="/static/qr/qr_course_{{ course.id }}.png" alt="رمز المادة" width="80">
-            </td>
+            <td><img src="/static/qr/qr_course_{{ course.id }}.png" width="80"></td>
 
             <!-- ✅ تم تضمين الفصل الدراسي -->
            
